--- a/src/assets/sass/general.scss
+++ b/src/assets/sass/general.scss
@@ -8,18 +8,28 @@ body {
 	text-align: center;
 }
 h1{
-  font-size: 1.75rem;
-  margin: 0 0 0.75rem 0;
-  color: #6d6a97;
+	&.title{
+	  font-size: 40px;
+    position: absolute;
+    margin-right: -123px;
+    right: 0;
+    top: 0px;
+    color: #6d6a97;
+		span{
+			color: #43415c;
+		}
+	}
 }
 h2{
+	color: #6d6a97;
+	font-size: 24px;
 	a{
 		font-size: 1.5rem;
 		position: absolute;
 		margin-right: -96px;
 		right: 0;
 		bottom: 0;
-		color: #2b2840; 
+		color: #6d6a97; 
 		&:hover{
 			text-decoration: none;
 			color: #2b2840;
